--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-standard": "^6.1.0",
     "axios": "^0.27.2",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
